2002-03-05  Richard Williamson  <rjw@apple.com>

        Pass errors correctly to browser.
        Removed old notification code.
        Added support for IFError.
        Lots of little cleanups.
        
	* src/kwq/KWQComboBox.mm: (QComboBox::setCurrentItem):
	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient
	IFURLHandleResourceDidBeginLoading:]), (-[KHTMLPartLoadClient
	IFURLHandleResourceDidCancelLoading:]), (-[KHTMLPartLoadClient
	IFURLHandleResourceDidFinishLoading:data:]), (-[KHTMLPartLoadClient
	IFURLHandle:resourceDataDidBecomeAvailable:]), (-[KHTMLPartLoadClient
	IFURLHandle:resourceDidFailLoadingWithResult:]), (KHTMLPart::openURL),
	(KHTMLPart::closeURL):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient
	IFURLHandle:resourceDidFailLoadingWithResult:]):
	* src/kwq/WCError.h:
	* src/kwq/WCWebDataSource.h:
	* src/kwq/external.h:

2002-03-05  Richard Williamson  <rjw@apple.com>

        With fonts now being correctly specified we're exercising some new code paths.  This introduced a new
        class of weird string bugs.  Turns out that CFString is doing some mojo that I suspect is a performance
        optimization.  Constants strings appears to be uniqued and hard-wired to have a -1 retain count.  It
        looks like strings created by preferences are uniqued in this manner.  This plays havoc with our
        copy-on-write QString implementation.  The following GDB exercise illustrates the problem:
        
        (gdb) po (id)[(id)[NSUserDefaults standardUserDefaults] objectForKey:(id)[NSString stringWithCString: "WebKitFixedFont"]]
        Andale Mono
        (gdb) p (int)[(id)[(id)[NSUserDefaults standardUserDefaults] objectForKey:(id)[NSString stringWithCString: "WebKitFixedFont"]] retainCount]
        $28 = -1
        (gdb) p (id)[(id)[NSUserDefaults standardUserDefaults] objectForKey:(id)[NSString stringWithCString: "WebKitFixedFont"]]
        $27 = (objc_object *) 0x40172a4
        (gdb) p (void)[$27 retain]
        $29 = void